js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-gen-await-import-call-unknown.js
DONOTEVALUATE
(
)
;
async
function
*
f
(
)
{
await
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
}
